--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -131,11 +131,10 @@ tail_includes:
 </div>
 <!-- div.post-tail-wrapper -->
 
-<script
-  src="https://utteranc.es/client.js"
-  repo="redcarrot1/redcarrot1.github.io"
-  issue-term="pathname"
-  theme="github-light"
-  crossorigin="anonymous"
-  async
-></script>
+<script src="https://utteranc.es/client.js"
+        repo="redcarrot1/redcarrot1.github.io"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
