--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -47,7 +47,7 @@
     {% endfor %}
     <li class="nav-item">
     <a href="https://hits.seeyoufarm.com">
-        <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fredcarrot1.github.io&count_bg=%23000000&title_bg=%23000000&icon=openstreetmap.svg&icon_color=%23FFFFFF&title=Visitors&edge_flat=false"/>
+        <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fredcarrot1.github.io&count_bg=%23000000&title_bg=%23000000&icon=openstreetmap.svg&icon_color=%23FFFFFF&title=Visitors&edge_flat=false" alt="error"/>
     </a>
     </li>
   </ul>
