--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -66,9 +66,13 @@
 
     {% for entry in site.data.contact %}
       {% case entry.type %}
-        {% when 'github', 'twitter' %}
+        {% when 'github' %}
           {%- capture url -%}
             https://{{ entry.type }}.com/{{ site[entry.type].username }}
+          {%- endcapture -%}
+        {% when 'twitter' %}
+          {%- capture url -%}
+            https://www.instagram.com/hong._taek/
           {%- endcapture -%}
         {% when 'email' %}
           {% assign email = site.social.email | split: '@' %}
