delete: lazy-load images

--- a/_includes/refactor-content.html
+++ b/_includes/refactor-content.html
@@ -134,12 +134,12 @@
     {% endif %}
 
     <!-- lazy-load images <https://github.com/aFarkas/lazysizes#readme> -->
-    {% assign _left = _left | replace: 'src=', 'data-src=' %}
+    <!-- {% assign _left = _left | replace: 'src=', 'data-src=' %}
     {% if _left contains 'class=' %}
       {% assign _left = _left | replace: 'class="', 'class="lazyload '%}
     {% else %}
       {% assign _left = _left | append: ' class="lazyload"' %}
-    {% endif %}
+    {% endif %} -->
 
     <!-- add image placeholder -->
     {% if _lqip %}
