--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,10 @@ tail_includes:
 
       <!-- lastmod date -->
       {% if page.last_modified_at and page.last_modified_at != page.date %}
-        
+      <span>
+        {{ site.data.locales[lang].post.updated }}
+        {% include datetime.html date=page.last_modified_at tooltip=true lang=lang %}
+      </span>
       {% endif %}
 
       {% if page.image %}
